# wilddog-client-openwrt

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  configure.in
docs/: Wilddog-SDK-Config-User-Manual.md
examples/demo/: Makefile
examples/demo/src/: Makefile  demo.c
src/: ramtest.c  wilddog_debug.c  wilddog_url_parser.h
src/secure/tinydtls/: sha2.c
tools/libwilddog/: Makefile
