noinst_LIBRARIES=libwilddog.a
INCLUDES=-I $(top_srcdir)/../lib/include -I $(top_srcdir)/../lib/src -I $(top_srcdir)/../lib/src/networking/coap  -I ./include -I ./src -I ./src/networking/coap 
AM_CFLAGS=
libwilddog_a_SOURCES= \
	./platform/linux/wilddog_posix.c \
	./src/performtest.c \
	./src/ramtest.c \
	./src/test_lib.h \
	./src/utlist.h \
	./src/wilddog_api.c \
	./src/wilddog_common.c \
	./src/wilddog_common.h \
	./src/wilddog_conn.c \
	./src/wilddog_conn.h \
	./src/wilddog_ct.c \
	./src/wilddog_ct.h \
	./src/wilddog_debug.c \
	./src/wilddog_endian.h \
	./src/wilddog_event.c \
	./src/wilddog_event.h \
	./src/wilddog_node.c \
	./src/wilddog_payload.h \
	./src/wilddog_protocol.h \
	./src/wilddog_sec.h \
	./src/wilddog_sec_host.c \
	./src/wilddog_store.c \
	./src/wilddog_store.h \
	./src/wilddog_url_parser.c \
	./src/wilddog_url_parser.h \
	./src/networking/coap/bits.h \
	./src/networking/coap/option.c \
	./src/networking/coap/option.h \
	./src/networking/coap/pdu.c \
	./src/networking/coap/pdu.h \
	./src/networking/coap/wilddog_protocol_coap.c \
	./src/networking/coap/wilddog_protocol_coap.h \
	./src/serialize/cbor/wilddog_cbor.c \
	./src/serialize/cbor/wilddog_cbor.h \
	./include/wilddog.h \
	./include/wilddog_api.h \
	./include/wilddog_config.h \
	./include/wilddog_debug.h \
	./include/wilddog_port.h  

if WITHOUT_DTLS
libwilddog_a_SOURCES += \
	./src/secure/nosec/wilddog_nosec.c 

AM_CFLAGS+=-DWILDDOG_PORT=5683
else
if WITH_MBEDTLS
INCLUDES+=-I $(top_srcdir)/../lib/src/secure/mbedtls/inc   -I ./src/secure/mbedtls/inc
libwilddog_a_SOURCES += \
	./src/secure/mbedtls/lib/aes.c \
	./src/secure/mbedtls/lib/aesni.c \
	./src/secure/mbedtls/lib/arc4.c \
	./src/secure/mbedtls/lib/asn1parse.c \
	./src/secure/mbedtls/lib/asn1write.c \
	./src/secure/mbedtls/lib/base64.c \
	./src/secure/mbedtls/lib/bignum.c \
	./src/secure/mbedtls/lib/blowfish.c \
	./src/secure/mbedtls/lib/camellia.c \
	./src/secure/mbedtls/lib/ccm.c \
	./src/secure/mbedtls/lib/certs.c \
	./src/secure/mbedtls/lib/cipher.c \
	./src/secure/mbedtls/lib/cipher_wrap.c \
	./src/secure/mbedtls/lib/ctr_drbg.c \
	./src/secure/mbedtls/lib/debug.c \
	./src/secure/mbedtls/lib/des.c \
	./src/secure/mbedtls/lib/dhm.c \
	./src/secure/mbedtls/lib/ecdh.c \
	./src/secure/mbedtls/lib/ecdsa.c \
	./src/secure/mbedtls/lib/ecp.c \
	./src/secure/mbedtls/lib/ecp_curves.c \
	./src/secure/mbedtls/lib/entropy.c \
	./src/secure/mbedtls/lib/entropy_poll.c \
	./src/secure/mbedtls/lib/gcm.c \
	./src/secure/mbedtls/lib/hmac_drbg.c \
	./src/secure/mbedtls/lib/md5.c \
	./src/secure/mbedtls/lib/md.c \
	./src/secure/mbedtls/lib/md_wrap.c \
	./src/secure/mbedtls/lib/net.c \
	./src/secure/mbedtls/lib/oid.c \
	./src/secure/mbedtls/lib/padlock.c \
	./src/secure/mbedtls/lib/pem.c \
	./src/secure/mbedtls/lib/pk.c \
	./src/secure/mbedtls/lib/pkcs12.c \
	./src/secure/mbedtls/lib/pkcs5.c \
	./src/secure/mbedtls/lib/pkparse.c \
	./src/secure/mbedtls/lib/pk_wrap.c \
	./src/secure/mbedtls/lib/ripemd160.c \
	./src/secure/mbedtls/lib/rsa.c \
	./src/secure/mbedtls/lib/sha1.c \
	./src/secure/mbedtls/lib/sha256.c \
	./src/secure/mbedtls/lib/ssl_ciphersuites.c \
	./src/secure/mbedtls/lib/ssl_cli.c \
	./src/secure/mbedtls/lib/ssl_srv.c \
	./src/secure/mbedtls/lib/ssl_tls.c \
	./src/secure/mbedtls/lib/timing.c \
	./src/secure/mbedtls/lib/x509.c \
	./src/secure/mbedtls/lib/x509_crt.c \
	./src/secure/mbedtls/lib/wilddog_sec_mbedtls.c \
	./src/secure/mbedtls/inc/mbedtls/aes.h \
	./src/secure/mbedtls/inc/mbedtls/aesni.h \
	./src/secure/mbedtls/inc/mbedtls/arc4.h \
	./src/secure/mbedtls/inc/mbedtls/asn1.h \
	./src/secure/mbedtls/inc/mbedtls/asn1write.h \
	./src/secure/mbedtls/inc/mbedtls/base64.h \
	./src/secure/mbedtls/inc/mbedtls/bignum.h \
	./src/secure/mbedtls/inc/mbedtls/blowfish.h \
	./src/secure/mbedtls/inc/mbedtls/bn_mul.h \
	./src/secure/mbedtls/inc/mbedtls/camellia.h \
	./src/secure/mbedtls/inc/mbedtls/ccm.h \
	./src/secure/mbedtls/inc/mbedtls/certs.h \
	./src/secure/mbedtls/inc/mbedtls/check_config.h \
	./src/secure/mbedtls/inc/mbedtls/cipher.h \
	./src/secure/mbedtls/inc/mbedtls/cipher_internal.h \
	./src/secure/mbedtls/inc/mbedtls/compat-1.3.h \
	./src/secure/mbedtls/inc/mbedtls/config.h \
	./src/secure/mbedtls/inc/mbedtls/ctr_drbg.h \
	./src/secure/mbedtls/inc/mbedtls/debug.h \
	./src/secure/mbedtls/inc/mbedtls/des.h \
	./src/secure/mbedtls/inc/mbedtls/dhm.h \
	./src/secure/mbedtls/inc/mbedtls/ecdh.h \
	./src/secure/mbedtls/inc/mbedtls/ecdsa.h \
	./src/secure/mbedtls/inc/mbedtls/ecp.h \
	./src/secure/mbedtls/inc/mbedtls/entropy.h \
	./src/secure/mbedtls/inc/mbedtls/entropy_poll.h \
	./src/secure/mbedtls/inc/mbedtls/error.h \
	./src/secure/mbedtls/inc/mbedtls/gcm.h \
	./src/secure/mbedtls/inc/mbedtls/havege.h \
	./src/secure/mbedtls/inc/mbedtls/hmac_drbg.h \
	./src/secure/mbedtls/inc/mbedtls/md2.h \
	./src/secure/mbedtls/inc/mbedtls/md4.h \
	./src/secure/mbedtls/inc/mbedtls/md5.h \
	./src/secure/mbedtls/inc/mbedtls/md.h \
	./src/secure/mbedtls/inc/mbedtls/md_internal.h \
	./src/secure/mbedtls/inc/mbedtls/memory_buffer_alloc.h \
	./src/secure/mbedtls/inc/mbedtls/net.h \
	./src/secure/mbedtls/inc/mbedtls/oid.h \
	./src/secure/mbedtls/inc/mbedtls/padlock.h \
	./src/secure/mbedtls/inc/mbedtls/pem.h \
	./src/secure/mbedtls/inc/mbedtls/pkcs11.h \
	./src/secure/mbedtls/inc/mbedtls/pkcs12.h \
	./src/secure/mbedtls/inc/mbedtls/pkcs5.h \
	./src/secure/mbedtls/inc/mbedtls/pk.h \
	./src/secure/mbedtls/inc/mbedtls/pk_internal.h \
	./src/secure/mbedtls/inc/mbedtls/platform.h \
	./src/secure/mbedtls/inc/mbedtls/ripemd160.h \
	./src/secure/mbedtls/inc/mbedtls/rsa.h \
	./src/secure/mbedtls/inc/mbedtls/sha1.h \
	./src/secure/mbedtls/inc/mbedtls/sha256.h \
	./src/secure/mbedtls/inc/mbedtls/sha512.h \
	./src/secure/mbedtls/inc/mbedtls/ssl_cache.h \
	./src/secure/mbedtls/inc/mbedtls/ssl_ciphersuites.h \
	./src/secure/mbedtls/inc/mbedtls/ssl_cookie.h \
	./src/secure/mbedtls/inc/mbedtls/ssl_internal.h \
	./src/secure/mbedtls/inc/mbedtls/ssl.h \
	./src/secure/mbedtls/inc/mbedtls/ssl_ticket.h \
	./src/secure/mbedtls/inc/mbedtls/threading.h \
	./src/secure/mbedtls/inc/mbedtls/timing.h \
	./src/secure/mbedtls/inc/mbedtls/version.h \
	./src/secure/mbedtls/inc/mbedtls/x509_crl.h \
	./src/secure/mbedtls/inc/mbedtls/x509_crt.h \
	./src/secure/mbedtls/inc/mbedtls/x509_csr.h \
	./src/secure/mbedtls/inc/mbedtls/x509.h \
	./src/secure/mbedtls/inc/mbedtls/xtea.h
AM_CFLAGS+=-DWILDDOG_PORT=5684
else
libwilddog_a_SOURCES+= \
	./src/secure/tinydtls/alert.h \
	./src/secure/tinydtls/tiny_ccm.c \
	./src/secure/tinydtls/ccm.h \
	./src/secure/tinydtls/crypto.c \
	./src/secure/tinydtls/crypto.h \
	./src/secure/tinydtls/tiny_debug.c \
	./src/secure/tinydtls/debug.h \
	./src/secure/tinydtls/dtls.c \
	./src/secure/tinydtls/dtls.h \
	./src/secure/tinydtls/dtls_config.h \
	./src/secure/tinydtls/dtls_time.c \
	./src/secure/tinydtls/dtls_time.h \
	./src/secure/tinydtls/ecc.c \
	./src/secure/tinydtls/ecc.h \
	./src/secure/tinydtls/global.h \
	./src/secure/tinydtls/hmac.c \
	./src/secure/tinydtls/hmac.h \
	./src/secure/tinydtls/netq.c \
	./src/secure/tinydtls/netq.h \
	./src/secure/tinydtls/numeric.h \
	./src/secure/tinydtls/peer.c \
	./src/secure/tinydtls/peer.h \
	./src/secure/tinydtls/prng.h \
	./src/secure/tinydtls/rijndael.c \
	./src/secure/tinydtls/rijndael.h \
	./src/secure/tinydtls/session.c \
	./src/secure/tinydtls/session.h \
	./src/secure/tinydtls/sha2.c \
	./src/secure/tinydtls/sha2.h \
	./src/secure/tinydtls/state.h \
	./src/secure/tinydtls/t_list.h \
	./src/secure/tinydtls/tiny_platform.h \
	./src/secure/tinydtls/tinydtls.h \
	./src/secure/tinydtls/uthash.h \
	./src/secure/tinydtls/utlist.h \
	./src/secure/tinydtls/wilddog_sec_tinydtls.c
AM_CFLAGS+=-DWILDDOG_PORT=5684 -fno-strict-aliasing -pthread
endif
endif

